oracle-k8s-cluster-labs/day12/manifests/netpol-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cka-labs
spec:
  podSelector: {}
  policyTypes:
  - Ingress
